# TodoList

./: .env  .env.example  .gitattributes  .gitignore  README.md  Todo List.md  pyproject.toml
todo_app/: __init__.py  config.py  dest.py  exceptions.py  logger.py  main.py  utils.py
todo_app/commands/: add.py  delete.py  done.py  edit.py  list.py  show.py
todo_app/dto/: __init__.py  task_create.py  task_response.py  task_update.py
todo_app/i18n/: __init__.py  en.py  zh.py
todo_app/language/: __init__.py  en.py
todo_app/models/: task.py
todo_app/repositories/: __init__.py  base.py  json_repo.py  memory_repo.py
todo_app/services/: task_service.py
todo_app/tests/: __init__.py  conftest.py  test_dtos.py  test_exceptions.py  test_i18n.py  test_json_repo.py  test_memory_repo.py  test_models.py  test_task_service.py
